--- a/DishesMinimalApi/DishesMinimalApi.csproj
+++ b/DishesMinimalApi/DishesMinimalApi.csproj
@@ -10,4 +10,11 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+    <Folder Include="Infrastructure\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Shared\" />
+  </ItemGroup>
+
 </Project>
