--- a/DishesMinimalApi/DishesMinimalApi.csproj
+++ b/DishesMinimalApi/DishesMinimalApi.csproj
@@ -8,12 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Features\" />
-    <Folder Include="Infrastructure\" />
-    <Folder Include="Extensions\" />
     <Folder Include="Shared\" />
   </ItemGroup>
 
