--- a/DishesMinimalApi/appsettings.json
+++ b/DishesMinimalApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DishesDBConnectionString": "Server=.;Database=DishesDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
