Add endpoint filters (api key filter, logging filter, request timing filter)

--- a/DishesMinimalApi/appsettings.json
+++ b/DishesMinimalApi/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DishesDBConnectionString": "Server=.;Database=DishesDb;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  },
+  "Api-Key": "L7TxLl9ZPMHWCBgdrzg0ysaYJ5LSfKwB"
 }
